# Whatup_Buttercup

./: pyproject.toml
tests/: test_whatup_buttercup.py
whatup_buttercup/: wtf  wtf.py
whatup_buttercup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
