[tool.poetry]
name = "whatup_buttercup"
version = "0.1.0"
description = ""
authors = ["Spenny <sscherer01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
whatup_buttercup = "whatup_buttercup.wtf:main"